fix(responsive): fix responsive issues on mobile for small height screen

--- a/app/site/widgets/aot-header/aot-header.scss
+++ b/app/site/widgets/aot-header/aot-header.scss
@@ -75,7 +75,7 @@ aot-header {
 
     .navbar {
         @include fluid {
-            font-size: 20px;
+            font-size: 15px;
         }
 
         @include media-sm {
@@ -112,7 +112,7 @@ aot-header {
         z-index: 1;
 
         @include fluid {
-            font-size: 15px;
+            font-size: 13px;
         }
 
         @include media-sm {
